Fix gaps in 02-margin-and-padding-2

--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -12,6 +12,7 @@ body {
 
 .title {
   background: #e3f4ff;
+  margin-bottom: 8px;
   padding: 8px;
   font-size: 16px;
 }
@@ -19,7 +20,7 @@ body {
 .content {
   background: #e3f4ff;
   padding: 16px 8px;
-  margin-bottom: 16px;
+  margin-bottom: 8px;
 }
 
 .button-container {
